fix spaceing on home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -864,3 +864,7 @@ background-color: rgba(255,255,255,0.1);
   transition: margin-right 0.5s;
   -webkit-transition: margin-right 0.5s;
 }
+
+.views.scoreboard.show .dayPoints{
+ margin-bottom: 40px;
+}
