moved files into public

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -518,7 +518,7 @@ margin-bottom: 30px;
 /*-------Home start New Game-------*/
 .startGamehome{
   height:1000px;
-  background: url(xspace.gif);
+  background: url('/image/xspace.gif');
   background-size: cover;
  /* border:red 1px solid;*/
   color: white;
